golang-petname (2.9) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 Sep 2017 17:06:36 -0500

golang-petname (2.8-0ubuntu1) artful; urgency=medium

  * petname.go, README.md:
    - update wordlists, from petname upstream changes

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 Sep 2017 17:06:33 -0500

golang-petname (2.7-0ubuntu1) artful; urgency=medium

  [ Brian Fallik ]
  * README.md:
    - https://github.com/dustinkirkland/golang-petname/pull/3
    - update README.md to be Markdown compliant #3
  * cmd/petname/main.go, petname.go:
    - move random seeding to the main function
    - callers of our library will need to ensure their PRNG
      is properly seeded

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 27 Apr 2017 18:08:47 -0500

golang-petname (2.6-0ubuntu1) zesty; urgency=medium

  [ Michael Hudson-Doyle ]
  * Fix repeated use of shlibs:Depends substvar that lead to broken Depends.
    - https://github.com/dustinkirkland/golang-petname/pull/2

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 05 Jan 2017 15:50:06 -0600

golang-petname (2.5-0ubuntu1) zesty; urgency=medium

  [ Alexander Sack ]
  * petname.go:
    - initialize with a random seed,
      https://github.com/dustinkirkland/golang-petname/pull/1

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 14 Nov 2016 09:34:59 -0600

golang-petname (2.4-0ubuntu1) yakkety; urgency=medium

  * debian/control, debian/rules: LP: #1625753
    - fix uninstallable golang-petname-dev on xenial

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 20 Sep 2016 14:48:06 -0500

golang-petname (2.3-0ubuntu1) yakkety; urgency=medium

  * debian/rules:
    - don't build libgolang-petname1 on xenial

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 23 Aug 2016 09:26:37 -0400

golang-petname (2.2-0ubuntu1) yakkety; urgency=medium

  * debian/rules, === removed directory usr, === removed directory
    usr/lib:
    - fix shared library build on yakkety while maintaining xenial