@@ -1,3 +1,2 @@
 petname.go /usr/share/gocode/src/github.com/dustinkirkland/golang-petname
 petname_test.go /usr/share/gocode/src/github.com/dustinkirkland/golang-petname
-usr/lib/
